--- a/sass/tours.sass
+++ b/sass/tours.sass
@@ -33,6 +33,8 @@
             display: none
         .description
             font-size: 20px
+            height: 72px
+            overflow: hidden
         .link
             font-size: 18px
             color: tomato
